[package]
name    = "wordbase-sys"
publish = false

authors.workspace      = true
categories.workspace   = true
edition.workspace      = true
keywords.workspace     = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true

[lib]
crate-type = ["cdylib"]
doc        = false
name       = "wordbase"

[features]
android = ["wordbase/android"]

[dependencies]
wordbase = { workspace = true, features = ["uniffi"] }
