[package]
name = "wordbase-texthooker-server"

authors.workspace      = true
categories.workspace   = true
edition.workspace      = true
keywords.workspace     = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true

[dependencies]
wordbase        = { workspace = true }
wordbase-engine = { workspace = true }

anyhow            = { workspace = true }
futures           = { workspace = true }
rustyline         = { workspace = true }
serde_json        = { workspace = true }
tokio             = { workspace = true, features = ["full"] }
tokio-tungstenite = { workspace = true }

[package.metadata.cargo-shear]
ignored = [
  "bzip2", # to enable transitive dependency features
]
