[package]
description = "Dictionary and word lookup service"
name        = "wordbase"
version     = "0.1.0"

authors.workspace      = true
categories.workspace   = true
edition.workspace      = true
keywords.workspace     = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true

[features]
desktop = ["dep:directories", "dep:tokio-tungstenite"]
poem    = ["wordbase-api/poem"]
uniffi  = ["wordbase-api/uniffi", "dep:uniffi"]

[dependencies]
jmdict-furigana = { workspace = true }
wordbase-api    = { workspace = true, features = ["render-html"] }

anyhow               = { workspace = true }
arc-swap             = { workspace = true }
async-compression    = { workspace = true, features = ["xz"] }
async-stream         = { workspace = true }
async-tar            = { workspace = true }
async_zip            = { workspace = true, features = ["deflate", "tokio"] }
bytes                = { workspace = true }
data-encoding        = { workspace = true }
directories          = { workspace = true, optional = true }
foldhash             = { workspace = true }
futures              = { workspace = true }
indexmap             = { workspace = true, features = ["serde"] }
itertools            = { workspace = true }
lindera              = { workspace = true, features = ["unidic", "compress"] }
maud                 = { workspace = true }
paste                = { workspace = true }
pin-project          = { workspace = true }
regex                = { workspace = true }
rmp-serde            = { workspace = true }
serde                = { workspace = true, features = ["derive"] }
serde_json           = { workspace = true, features = ["preserve_order"] }
serde_repr           = { workspace = true }
sqlx                 = { workspace = true, features = ["runtime-tokio", "sqlite"] }
tera                 = { workspace = true, features = ["preserve_order"] }
tokio                = { workspace = true, features = ["sync", "macros"] }
tokio-stream         = { workspace = true }
tokio-tungstenite    = { workspace = true, optional = true }
tokio-util           = { workspace = true, features = ["rt"] }
tracing              = { workspace = true }
unicode-segmentation = { workspace = true }
uniffi               = { workspace = true, optional = true, features = ["tokio"] }

derive_more = { workspace = true, features = [
  "debug",
  "from",
  "display",
  "error",
  "deref",
  "deref_mut",
] }

[dev-dependencies]
tempfile = { workspace = true }
tokio    = { workspace = true, features = ["full"] }
