[package]
description = "TODO"
name = "bookhook"
version = "0.1.0"

authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true

[features]

[dependencies]
serde = { workspace = true, features = ["alloc", "derive"] }
