[package]
description = "AnkiConnect client"
name        = "wordbase-ankiconnect"
version     = "0.1.0"

authors.workspace      = true
categories.workspace   = true
edition.workspace      = true
keywords.workspace     = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true

[features]
client-reqwest = ["dep:reqwest"]

[dependencies]
derive_more = { workspace = true, features = ["display", "error"] }
serde       = { workspace = true, features = ["derive"] }

reqwest = { workspace = true, optional = true, features = ["json"] }
