[package]
description = "Dictionary and word lookup service - server implementation"
name        = "wordbase-server"
version     = "0.1.0"

authors.workspace      = true
categories.workspace   = true
edition.workspace      = true
keywords.workspace     = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true

[dependencies]
wordbase-engine = { workspace = true }

anyhow               = { workspace = true }
derive_more          = { workspace = true, features = ["display", "error", "from"] }
foldhash             = { workspace = true }
futures              = { workspace = true }
rayon                = { workspace = true }
regex                = { workspace = true }
rmp-serde            = { workspace = true }
serde                = { workspace = true, features = ["derive"] }
serde_json           = { workspace = true }
serde_repr           = { workspace = true }
sqlx                 = { workspace = true, features = ["runtime-tokio", "sqlite"] }
tokio                = { workspace = true, features = ["sync"] }
tokio-stream         = { workspace = true }
tracing              = { workspace = true }
unicode-segmentation = { workspace = true }
zip                  = { workspace = true }
