[package]
name    = "wordbase-server"
version = "0.1.0"

authors.workspace      = true
categories.workspace   = true
edition.workspace      = true
keywords.workspace     = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true

[dependencies]
wordbase        = { workspace = true }
wordbase-engine = { workspace = true }

anyhow            = { workspace = true }
futures           = { workspace = true }
tokio             = { workspace = true, features = ["net", "sync"] }
tokio-tungstenite = { workspace = true }
tracing           = { workspace = true }

# enable features in transitive dependency crates
